<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Financial Management</string>
    <string name="back">Back</string>

    <string name="welcome">Welcome to Financial Management</string>
    <string name="login">Login</string>
    <string name="login_account">Login Account</string>
    <string name="email">Username or Email</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_agreement">By signing up, you agree to our Terms of Service and Privacy Policy</string>
    <string name="balance">Balance</string>
    <string name="net_change">Net Change</string>
    <string name="monthly_goal">Monthly Goal:</string>
    <string name="transport_cost">Transport cost</string>
    <string name="food_cost">Food cost</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="transactions">Transactions</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="hi_welcome_back">Hi, Welcome Back</string>
    <string name="good_morning">Good Morning</string>
    <string name="notifications">Notifications</string>
    <string name="profile_settings">Profile Settings</string>
</resources>